<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/itemNombreDispositivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/nombreDispositivo"


                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/itemFechaDispositivo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemFechaDispositivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/fechaDispositivo"


                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemNombreDispositivo" />

            <Button
                android:id="@+id/botonMostrarUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/Mostrar"
                app:layout_constraintBottom_toTopOf="@+id/botonEliminarUbicacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/botonEliminarUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/Eliminar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botonMostrarUbicacion" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>